--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -11,9 +11,15 @@
     "react/prop-types": 0,
     "no-console": 1,
     "react-hooks/rules-of-hooks": 2,
-    "react-hooks/exhaustive-depths": 1
+    "react-hooks/exhaustive-depths": 0,
+    "react/state-in-constructor": 1
   },
-  "plugins": ["react", "import", "jsx-a11y", "react-hooks"],
+  "plugins": [
+    "react",
+    "import",
+    "jsx-a11y",
+    "react-hooks"
+  ],
   "parserOptions": {
     "parser": "babel-eslint",
     "ecmaVersion": 2018,
