--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "format": "prettier \"src/**/*.{js,html}\" --write",
     "lint": "eslint \"src/**/*.{js,jsx}\" --quiet",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "clear-build-cache": "rm -rf .cache/ .dist/"
+    "clear-build-cache": "rm -rf .cache/ .dist/",
+    "build": "parcel build --public-url ./dist/ src/index.html",
+    "start": "npm run build && babel-node server/index.js"
   },
   "author": "",
   "license": "ISC",
@@ -31,8 +33,11 @@
     "prettier": "^1.19.1"
   },
   "dependencies": {
+    "@babel/node": "^7.7.7",
     "@frontendmasters/pet": "^1.0.3",
     "@reach/router": "^1.2.1",
+    "babel-cli": "^6.26.0",
+    "express": "^4.17.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0"
   },
