--- a/package.json
+++ b/package.json
@@ -34,7 +34,9 @@
     "@frontendmasters/pet": "^1.0.3",
     "@reach/router": "^1.2.1",
     "react": "^16.12.0",
-    "react-dom": "^16.12.0"
+    "react-dom": "^16.12.0",
+    "react-redux": "^7.1.3",
+    "redux": "^4.0.5"
   },
   "browserslist": [
     "last 2 Chrome versions"
