--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -30,7 +30,8 @@
     "env": {
       "es6": true,
       "browser": true,
-      "node": true
+      "node": true,
+      "jest": true
     },
     "settings": {
       "react": {
